# uniswapv2-mm

./: Cargo.toml  README.md  config.json
crates/bindings-uniswapv2/: Cargo.toml
crates/bindings-uniswapv2/src/: ierc20.rs  lib.rs  uniswapv2_pair.rs  uniswapv2_router02.rs  weth.rs
src/: main.rs  tswap.rs
src/contracts/: erc20.rs  mod.rs  weth.rs
src/params/: config.rs  env.rs
